examples/test/testpolicy17048.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17048
  namespace: namespace95
spec:
  podSelector:
    matchLabels:
      key41: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value12
          key22: value44
          key32: value47
      podSelector:
        matchLabels:
          key32: value44
